--- a/_posts/2019-08-05-release-1.0.md
+++ b/_posts/2019-08-05-release-1.0.md
@@ -7,9 +7,5 @@ categories:
 author_staff_member: cyril
 ---
 
-Direct selling is the marketing and selling of products directly to consumers away from a fixed retail location. Peddling is the oldest form of direct selling. Modern direct selling includes sales made through the party plan, one-on-one demonstrations, and other personal contact arrangements as well as internet sales.
-
-## Improvements
-
-## Fixes
+ERA API 1.0 is coming...
 
