--- a/_posts/2019-10-08-release-1.0.md
+++ b/_posts/2019-10-08-release-1.0.md
@@ -6,7 +6,5 @@ categories:
 author_staff_member: cyril
 ---
 
-ERA API 1.0 is now up!
-
-Be updated about ERA API news by following our [RSS feed](https://rail-europe.github.io/era-api/feed.xml) !
+ERA API 1.0 is now up! Be updated about ERA API news by following our [RSS feed](https://rail-europe.github.io/era-api/feed.xml) !
 
