--- a/_posts/2019-10-17-release-1.102.0.md
+++ b/_posts/2019-10-17-release-1.102.0.md
@@ -7,15 +7,15 @@ author_staff_member: Vianney - Agathe
 ---
 This release mainly aimed at delivering some front improvements, in particular the addition of the possibility to display prices in Billing or Selling currency. Only the changes having an impact for API are mentioned below.
 
-**features/improvements** 
+# **features/improvements** 
 
 none
 
-**fixes**
+# **fixes**
 
 Reduce token expiration time between microservices (15s to 60s)
 
-**api changes**
+# **api changes**
 
 A clean up has been made concerning the list of the fields in the response of the API.
 Fields that are not destined to be used by the APIs clients has been deleted.
