fix bad link in rss

--- a/_posts/2019-10-17-release-1.102.0.md
+++ b/_posts/2019-10-17-release-1.102.0.md
@@ -7,6 +7,8 @@ author_staff_member: Vianney - Agathe
 ---
 This release mainly aimed at delivering some front improvements, in particular the addition of the possibility to display prices in Billing or Selling currency. Only the changes having an impact for API are mentioned below.
 
+<!--more-->
+
 **<u>features/improvements</u>**
 
 none
