--- a/_posts/2019-10-22-release-1.103.0.md
+++ b/_posts/2019-10-22-release-1.103.0.md
@@ -5,12 +5,13 @@ categories:
   - releases
 author_staff_member: Vianney
 ---
-This release only concern Swiss ePass Products
+ERA release 1.103.0 will be deployed on 24th October, with limited API impacts related to the extension of the Hold time for Swiss ePass bookings.
+
+<!--more-->
 
 **<u>features/improvements</u>**
 
-ERA release 1.103.0 will be deployed on 24th October, with limited API impacts related to the extension of the Hold time for Swiss ePass bookings.
-Click on “Read more” for more details.
+Booking Hold time is extended for Swiss ePass Products from 20 minutes to 3 days
 
 **<u>fixes</u>**
 
