--- a/_posts/2019-11-19-release-1.107.0.md
+++ b/_posts/2019-11-19-release-1.107.0.md
@@ -1,6 +1,6 @@
 ---
 date: 2019-11-19
-title: Release 1.103.0
+title: Release 1.107.0
 categories:
   - releases
 author_staff_member: Vianney
@@ -11,7 +11,7 @@ ERA release 1.107.0 will be deployed on 19th november, with limited API impacts 
 
 **<u>features/improvements</u>**
 
-Booking Hold time is extended for Swiss ePass Products from 20 minutes to 3 days
+none
 
 **<u>fixes</u>**
 
