--- a/_posts/2019-12-17-release-1.113.0.md
+++ b/_posts/2019-12-17-release-1.113.0.md
@@ -1,27 +1,17 @@
 ---
-date: 2019-12-17
-title: Release 1.113.0
+date: 2019-12-19
+title: Release 1.114.0
 categories:
   - releases
 author_staff_member: Vianney
 ---
-ERA release 1.113.0 will be deployed on 17th December. It gives updates and clarifications of the documentations
+ERA release 1.114.0 will be deployed on 19th December. Places API is impacted
 
 <!--more-->
 
 **<u>features/improvements</u>**
 
-- Number of passengers are documented
-- Schema of the P2P search response is available
-- Explanation of price discrepancy
-- Tips for integrators
-- List of values acceptable or send back in the response are set for:
-    * Vehicles
-    * Country of residence
-    * On Board services
-    * Cabin class
-    * Flexibility
-- Update of model schema.   
+none
 
 **<u>fixes</u>**
 
@@ -29,4 +19,7 @@ none
 
 **<u>api changes</u>**
 
-none
+- places service: 
+    * parameter X-Point-Of-Sale is mandatory
+    * Some station which are not itinerary stations will not appear anymore.
+
