--- a/_posts/2020-01-21-release-1.119-.0.md
+++ b/_posts/2020-01-21-release-1.119-.0.md
@@ -5,7 +5,7 @@ categories:
   - releases
 author_staff_member: Vianney
 ---
-ERA release 1.117.0 will be deployed on 14th January. Search and Refund APIs are impacted
+ERA release 1.119.0 will be deployed on 21st January. Update Travelers detail API is impacted
 
 <!--more-->
 
