--- a/_posts/2020-05-06-release-1.138.0.md
+++ b/_posts/2020-05-06-release-1.138.0.md
@@ -5,7 +5,7 @@ categories:
   - releases
 author_staff_member: Vianney
 ---
-ERA release 1.138.0 will be deployed on 6th May. A correction for places has been implemented.
+ERA release 1.138.0 will be deployed on 6th May. A new refund feature is available and a field is deprecated.
 
 <!--more-->
 
