--- a/_posts/2020-06-11-release-1.144.0.md
+++ b/_posts/2020-06-11-release-1.144.0.md
@@ -5,6 +5,7 @@ categories:
   - releases
 author_staff_member: Gaetan
 ---
+Extends use of 'void' operation for a refund during grace period, and some fixes
 
 <!--more-->
 
