--- a/_posts/2020-07-07-release-1.151.0.md
+++ b/_posts/2020-07-07-release-1.151.0.md
@@ -5,6 +5,7 @@ categories:
   - releases
 author_staff_member: Gaetan
 ---
+New field offerLocations in create booking response, and more
 
 <!--more-->
 
