--- a/_posts/2020-02-19-release-1.128.0.md
+++ b/_posts/2020-02-19-release-1.128.0.md
@@ -11,8 +11,8 @@ ERA release 1.128.0 will be deployed on 12th March. 2 new products are available
 
 **<u>features/improvements</u>**
 
-POST /offers/point-to-point/searches: the header X-Fake-Mode is now available to prevent from non stable sandbox inventories. For more details see  https://docs.era.raileurope.com/overview/requests
-
+- NTV offers available
+- TER offers available
 
 **<u>fixes</u>**
 
@@ -20,8 +20,7 @@ none
 
 **<u>api changes</u>**
 
-- NTV offers available
-- TER offers available
+- POST /offers/point-to-point/searches: the header X-Fake-Mode is now available to prevent from non stable sandbox inventories. For more details see  https://docs.era.raileurope.com/overview/requests
 
 
   
