--- a/_posts/2020-06-29-release-1.149.0.md
+++ b/_posts/2020-06-29-release-1.149.0.md
@@ -11,7 +11,7 @@ Timeouts improvements for china
 
 **<u>features/improvements</u>**
 
-- none
+none
 
 **<u>fixes</u>**
 
@@ -19,7 +19,7 @@ Timeouts improvements for china
 
 **<u>api changes</u>**
 
-- none
+none
 
 
   
