--- a/_posts/2020-07-07-release-1.151.0.md
+++ b/_posts/2020-07-07-release-1.151.0.md
@@ -11,7 +11,7 @@ New field offerLocations in create booking response, and more
 
 **<u>features/improvements</u>**
 
-- none
+none
 
 **<u>fixes</u>**
 
