--- a/_posts/2021-04-27-release-1.208.0.md
+++ b/_posts/2021-04-27-release-1.208.0.md
@@ -1,9 +1,8 @@
 ---
-date: 2021-04-27
-title: Release 1.208.0
-categories:
-  - releases
-author_staff_member: Ludovic Moreau
+date: 2021-04-27 title: Release 1.208.0 categories:
+
+- releases author_staff_member: Ludovic Moreau
+
 ---
 
 <!--more-->
@@ -14,4 +13,14 @@ author_staff_member: Ludovic Moreau
 
 **<u>api changes</u>**
 
-Removal of deprecated fields for more than one year
+Removal of fields deprecated for more than one year:
+
+deprecated field|replacement
+---|---
+booking/billingPrices|booking/prices/billings[]
+booking/prices/billing/|booking/prices/billings[]
+booking/prices/partnerCommission|booking/prices/billings[]/partnerCommission
+booking/bookingsItems[]/recordLocator|NA
+booking/bookingsItems[]/valueDocuments/tickets|booking/bookingsItems[]/tickets
+booking/bookingsItems[type='pass']/conditions[]/score|NA
+booking/bookingsItems[type='point-to-point']/products[]/fare/shortLabel|NA
