--- a/_posts/2021-04-27-release-1.208.0.md
+++ b/_posts/2021-04-27-release-1.208.0.md
@@ -1,8 +1,9 @@
 ---
-date: 2021-04-27 title: Release 1.208.0 categories:
-
-- releases author_staff_member: Ludovic Moreau
-
+date: 2021-04-27 
+title: Release 1.208.0 
+categories:
+  - releases 
+author_staff_member: Ludovic Moreau
 ---
 
 <!--more-->
