Add a title to release note.

--- a/_posts/2021-04-27-release-1.208.0.md
+++ b/_posts/2021-04-27-release-1.208.0.md
@@ -5,6 +5,7 @@ categories:
   - releases 
 author_staff_member: Ludovic Moreau
 ---
+Removal of fields deprecated
 
 <!--more-->
 
@@ -15,7 +16,6 @@ author_staff_member: Ludovic Moreau
 **<u>api changes</u>**
 
 Removal of fields deprecated for more than one year:
-
 deprecated field|replacement
 ---|---
 booking/billingPrices|booking/prices/billings[]
