--- a/_posts/2021-04-15-release-1.204.0.md
+++ b/_posts/2021-04-15-release-1.204.0.md
@@ -5,6 +5,7 @@ categories:
   - releases
 author_staff_member: Maxime Ansquer
 ---
+New fields globalRoundTripPrice, ticketingOptions, ticketsCollectionReference
 
 <!--more-->
 
