--- a/_posts/2021-04-27-release-1.208.0.md
+++ b/_posts/2021-04-27-release-1.208.0.md
@@ -16,7 +16,7 @@ Removal of fields deprecated
 **<u>api changes</u>**
 
 Removal of fields deprecated for more than one year:
-deprecated field|replacement
+deprecated field|substitute
 ---|---
 booking/billingPrices|booking/prices/billings[]
 booking/prices/billing/|booking/prices/billings[]
