--- a/_posts/2021-11-16-release-1.256.0.md
+++ b/_posts/2021-11-16-release-1.256.0.md
@@ -5,20 +5,19 @@ categories:
   - releases 
 
 ---
-# Travel Change for Trenitalia is now available on ERA
+Travel Change for Trenitalia is now available on ERA
 
 
-
-## features/improvements
+**<u>features/improvements</u>**
 
 For most Trenitalia bookings you can now change the fare, the origin and or destination during the exchange operation.
 
 
-## fixes
+**<u>fixes</u>**
 
 None
 
 
-## api changes
+**<u>api changes</u>**
 
 None
