--- a/_posts/2021-11-16-release-1.256.0.md
+++ b/_posts/2021-11-16-release-1.256.0.md
@@ -10,7 +10,7 @@ Travel Change for Trenitalia is now available on ERA
 
 **<u>features/improvements</u>**
 
-For most Trenitalia bookings you can now change the fare, the origin and or destination during the exchange operation.
+For most Trenitalia bookings, you can now change the fare, the origin and/or destination during the exchange operation.
 
 
 **<u>fixes</u>**
