--- a/_posts/2020-02-19-release-1.128.0.md
+++ b/_posts/2020-02-19-release-1.128.0.md
@@ -20,7 +20,7 @@ none
 
 **<u>api changes</u>**
 
-- POST /offers/point-to-point/searches: the header X-Fake-Mode is now available to prevent from non stable sandbox inventories. For more details see  https://docs.era.raileurope.com/overview/requests
+- POST /offers/point-to-point/searches: the header X-Fake-Mode is now available to prevent from non stable sandbox inventories. For more details see https://docs.era.raileurope.com/docs/era-api-doc/ZG9jOjMwNzkyNTU0-requests
 
 
   
