--- a/_posts/2020-05-06-release-1.138.0.md
+++ b/_posts/2020-05-06-release-1.138.0.md
@@ -11,7 +11,7 @@ ERA release 1.138.0 will be deployed on 6th May. A new refund feature is availab
 
 **<u>features/improvements</u>**
 
-POST /bookings/{bookingId}/refunds: The refund one leg of a roundtrip item is now available. See the new feature on https://docs.era.raileurope.com/docs/era-api-doc/ZG9jOjM1NDExNzc4-2-1-refund-quotation#refund-quotation
+POST /bookings/{bookingId}/refunds: The refund one leg of a roundtrip item is now available. See the new feature on [how to make a refund quotation](https://docs.era.raileurope.com/docs/era-api-doc/ZG9jOjM1NDExNzc4-2-1-refund-quotation#refund-quotation)
 
 **<u>fixes</u>**
 
