--- a/_posts/2022-05-24-release-1.287.0.md
+++ b/_posts/2022-05-24-release-1.287.0.md
@@ -1,13 +1,16 @@
 ---
 date: 2022-05-24
-version: Release 1.287.0
+title: Release 1.287.0
+categories:
+  - releases
 ---
- 
+Deprecation of fields agencyBookingNumber
+
 **<u>api changes</u>**
- 
-deprecated field|substitute
----|---
-booking/agencyBookingNumber|booking/agencyBookingReference
-bookingView/agencyBookingNumber|bookingView/agencyBookingReference
-createBookingRequest/agencyBookingNumber|createBookingRequest/agencyBookingReference
-updateAgencyBookingNumberRequest/agencyBookingNumber|updateAgencyBookingReferenceRequest/agencyBookingReference
+
+| Deprecated field                                     | Substitute                                                 |
+|------------------------------------------------------|------------------------------------------------------------|
+| booking/agencyBookingNumber                          | booking/agencyBookingReference                             |
+| bookingView/agencyBookingNumber                      | bookingView/agencyBookingReference                         |
+| createBookingRequest/agencyBookingNumber             | createBookingRequest/agencyBookingReference                |
+| updateAgencyBookingNumberRequest/agencyBookingNumber | updateAgencyBookingReferenceRequest/agencyBookingReference |
