Replace slash by dots for field names in release 1.287.0

--- a/_posts/2022-05-24-release-1.287.0.md
+++ b/_posts/2022-05-24-release-1.287.0.md
@@ -10,7 +10,7 @@ Deprecation of fields agencyBookingNumber
 
 | Deprecated field                                     | Substitute                                                 |
 |------------------------------------------------------|------------------------------------------------------------|
-| booking/agencyBookingNumber                          | booking/agencyBookingReference                             |
-| bookingView/agencyBookingNumber                      | bookingView/agencyBookingReference                         |
-| createBookingRequest/agencyBookingNumber             | createBookingRequest/agencyBookingReference                |
-| updateAgencyBookingNumberRequest/agencyBookingNumber | updateAgencyBookingReferenceRequest/agencyBookingReference |
+| booking.agencyBookingNumber                          | booking.agencyBookingReference                             |
+| bookingView.agencyBookingNumber                      | bookingView.agencyBookingReference                         |
+| createBookingRequest.agencyBookingNumber             | createBookingRequest.agencyBookingReference                |
+| updateAgencyBookingNumberRequest.agencyBookingNumber | updateAgencyBookingReferenceRequest.agencyBookingReference |
