--- a/_posts/2023-03-02-release-1.342.0.md
+++ b/_posts/2023-03-02-release-1.342.0.md
@@ -12,7 +12,7 @@ New AfterSalesItem added: delayed and delayExpirationTime
 **<u>features/improvements</u>**
 
 - We added a new possible value for BookingItemStatus: CANCELED_FRAUD. A booking item will have this status if refund fraud is detected.  
-- We added a new possible value for AfterSalesOperations satus: WAITING_CHECK_FRAUD and CONFIRMED_WITH_FRAUD_DETECTED. A afterSalesOperations status will have this status if refund is delayed.  
+- We added a new possible value for AfterSalesOperations status: WAITING_CHECK_FRAUD and CONFIRMED_WITH_FRAUD_DETECTED. A afterSalesOperations status will have this status if refund is delayed.  
 - We added a new field for AfterSalesItem : delayed and delayExpirationTime. Delayed is true if the refund is delayed and delayExpirationTime is valued.  
 
 **<u>fixes</u>**
