Adding release note for RHB

--- a/_posts/2023-03-02-release-1.342.0.md
+++ b/_posts/2023-03-02-release-1.342.0.md
@@ -1,12 +1,10 @@
 ---
 date: 2023-03-02
 title: Release 1.342.0
-categories:
-  - releases
 ---
-New BookingItemStatus added: CANCELED_FRAUD.  
-New AfterSalesOperations status added: WAITING_CHECK_FRAUD and CONFIRMED_WITH_FRAUD_DETECTED  
-New AfterSalesItem added: delayed and delayExpirationTime  
+
+Adding handling of SNCF delayd refund.
+
 <!--more-->
 
 **<u>features/improvements</u>**
