--- a/_posts/2023-03-21-release-1.347.0.md
+++ b/_posts/2023-03-21-release-1.347.0.md
@@ -1,10 +1,10 @@
 ---
 date: 2023-03-21
 title: Release 1.347.0
-categories:
-  - releases
 ---
 
-**<u>features/improvements</u>**
+Adding expiration time for after sales.
+
+**<u>api changes</u>**
 
 - new field `expirationDate` on object `AfterSalesOperation`
