--- a/_posts/2023-03-28-release-1.349.0.md
+++ b/_posts/2023-03-28-release-1.349.0.md
@@ -3,6 +3,10 @@ date: 2023-03-28
 title: Release 1.349.0
 ---
 
+Already have a Eurail/Interrail Global pass? You can now book the corresponding seat reservation on ERA. The passholder seat reservation will be available only for Trenitalia at the moment.
+
+<!--more-->
+
 **<u>features/improvements</u>**
 
 - New possible values for TravelerInformation: REDUCTION_CARD_ID
