--- a/_posts/2021-04-27-release-1.208.0.md
+++ b/_posts/2021-04-27-release-1.208.0.md
@@ -1,9 +1,6 @@
 ---
 date: 2021-04-27 
-title: Release 1.208.0 
-categories:
-  - releases 
-author_staff_member: Ludovic Moreau
+title: Release 1.208.0
 ---
 Removal of fields deprecated
 
@@ -17,12 +14,12 @@ Removal of fields deprecated
 
 Removal of fields deprecated for more than one year:
 
-deprecated field|substitute
----|---
-booking/billingPrices|booking/prices/billings[]
-booking/prices/billing/|booking/prices/billings[]
-booking/prices/partnerCommission|booking/prices/billings[]/partnerCommission
-booking/bookingsItems[]/recordLocator|NA
-booking/bookingsItems[]/valueDocuments/tickets|booking/bookingsItems[]/tickets
-booking/bookingsItems[type='pass']/conditions[]/score|NA
-booking/bookingsItems[type='point-to-point']/products[]/fare/shortLabel|NA
+| deprecated field                                                         |substitute|
+|--------------------------------------------------------------------------|---|
+| booking/billingPrices                                                    |booking/prices/billings[]|
+| booking/prices/billing/                                                  |booking/prices/billings[]|
+| booking/prices/partnerCommission                                         |booking/prices/billings[]/partnerCommission|
+| booking/bookingsItems[]/recordLocator                                    |NA|
+| booking/bookingsItems[]/valueDocuments/tickets                           |booking/bookingsItems[]/tickets|
+| booking/bookingsItems[type='pass']/conditions[]/score                    |NA|
+| booking/bookingsItems[type='point-to-point']/products[]/fare/shortLabel  |NA|
