--- a/_posts/2023-04-11-release-1.352.0.md
+++ b/_posts/2023-04-11-release-1.352.0.md
@@ -3,8 +3,4 @@ date: 2023-04-11
 title: Release 1.352.0
 ---
 
-**<u>features/improvements</u>**
-
-- Booking ticket and seat reservation packages for Glacier and Bernina Express is now possible through ERA.
-
-
+Booking ticket and seat reservation packages for Glacier and Bernina Express is now possible through ERA.
