--- a/_posts/2019-11-26-release-1.108.0.md
+++ b/_posts/2019-11-26-release-1.108.0.md
@@ -17,4 +17,4 @@ none
 **<u>api changes</u>**
 
 model:
-- Prices: Selling element is available for clients who makes a ticket to the ERA support.
+- Prices: Selling element is available for clients who make a ticket to the ERA support.
