--- a/_posts/2020-02-04-release-1.122.0.md
+++ b/_posts/2020-02-04-release-1.122.0.md
@@ -12,7 +12,7 @@ none
 
 **<u>fixes</u>**
 
-POST /offers/passes/searches: a error is sent if the country int the pass research is not valid
+POST /offers/passes/searches: an error is sent if the country int the pass research is not valid
 
 **<u>api changes</u>**
 
