--- a/_posts/2020-02-19-release-1.128.0.md
+++ b/_posts/2020-02-19-release-1.128.0.md
@@ -2,7 +2,7 @@
 date: 2020-03-12
 title: Release 1.128.0
 ---
-ERA release 1.128.0 will be deployed on 12th March. 2 new products are available and a feature to prevent from from non stable sandbox inventories has been deployed.
+ERA release 1.128.0 will be deployed on 12th March. 2 new products are available and a feature to prevent from non-stable sandbox inventories has been deployed.
 
 <!--more-->
 
@@ -17,7 +17,7 @@ none
 
 **<u>api changes</u>**
 
-- POST /offers/point-to-point/searches: the header X-Fake-Mode is now available to prevent from non stable sandbox inventories. For more details see [overview request](https://docs.era.raileurope.com/docs/era-api-doc/ZG9jOjMwNzkyNTU0-requests)
+- POST /offers/point-to-point/searches: the header X-Fake-Mode is now available to prevent from non-stable sandbox inventories. For more details see [overview request](https://docs.era.raileurope.com/docs/era-api-doc/ZG9jOjMwNzkyNTU0-requests)
 
 
   
