--- a/_posts/2023-02-28-release-1.329.0.md
+++ b/_posts/2023-02-28-release-1.329.0.md
@@ -7,7 +7,7 @@ New BookingItemStatus added: CONFIRMATION_ERROR.
 
 **<u>features/improvements</u>**
 
-- We added a new possible value for BookingItemStatus: CONFIRMATION_ERROR. A booking item will have this status if an error occured during the confirmation.
+- We added a new possible value for BookingItemStatus: CONFIRMATION_ERROR. A booking item will have this status if an error occurred during the confirmation.
 
 **<u>fixes</u>**
 
