--- a/_posts/2020-07-16-release-1.153.0.md
+++ b/_posts/2020-07-16-release-1.153.0.md
@@ -3,7 +3,7 @@ date: 2020-07-16
 title: Release 1.153.0
 ---
 Trenitalia (domestic) and SBB (domestic) point to point offers are now available within your ERA platform!
-Thalys is now elligible to e-ticket and can now be booked seamlessly along with a Eurostar or TGV.
+Thalys is now eligible to e-ticket and can now be booked seamlessly along with an Eurostar or TGV.
 
 <!--more-->
 
