Adding release note for RHB

--- a/_posts/2023-04-11-release-1.352.0.md
+++ b/_posts/2023-04-11-release-1.352.0.md
@@ -4,3 +4,10 @@ title: Release 1.352.0
 ---
 
 Booking ticket and seat reservation packages for Glacier and Bernina Express is now possible through ERA.
+
+<!--more-->
+
+**<u>features/improvements</u>**
+
+- Panoramic trains tickets are now available either through SBB or RHB
+- Panoramic seat reservations can only be bought using RHB offers. Check our starter kit !
