[OVS-15410][API][Places] Provide Basic UIC Codes

--- a/_posts/2023-06-22-release-1.370.0.md
+++ b/_posts/2023-06-22-release-1.370.0.md
@@ -6,5 +6,8 @@ title: Release 1.370.0
 **<u>features/improvements</u>**
 
 - An identity document can now be used instead of a passport for Renfe bookings.
+- API - Introducing UIC attribute for places (only a few places available for now -- like `Brussells-Midi` for instance)
 
 **<u>api changes</u>**
+
+- New field `uicCode` on object `TranslatedPlace`
